# internal/transport/http/router/router.go
@@ -19,11 +19,13 @@ func NewRouter(h *handlers.Handler, mw middlewares.Middleware) (router *transpor
 	router = transportHTTP.NewRouter()
 	router.ConnectSwagger(h.ServeSwaggerFiles)
 
+	router.GET("/ping", h.HPingPong, mw.CORS)
+
+	// Auth
 	router.POST("/auth/registration", h.HRegistration, mw.CORS)
 	router.POST("/auth/otp-verify", h.HOTPVerify, mw.CORS)
-
 	router.POST("/auth/login", h.HLogin, mw.CORS)
-	router.GET("/ping", h.HPingPong, mw.CORS)
+	router.POST("/auth/refresh", h.HRefreshToken, mw.CORS)
 	// router.GET("/metrics", AdaptHandler(promhttp.Handler()), mw.CORS)
 	return
 }
