# pkg/docs/swagger.yaml
@@ -21,12 +21,6 @@ paths:
                   name: Body
                   schema:
                     properties:
-                        otp_code:
-                            default: "1234"
-                            description: Одноразовый код
-                            maxLength: 4
-                            type: string
-                            x-go-name: Code
                         password:
                             default: '!qwerty123'
                             description: Пароль
@@ -41,7 +35,6 @@ paths:
                             type: string
                             x-go-name: Phone
                     required:
-                        - otp_code
                         - password
                         - phone_number
                     type: object
@@ -137,6 +130,61 @@ paths:
             summary: Подтверждение номера пользователя по OTP после регистрации
             tags:
                 - Authorization
+    /auth/refresh:
+        post:
+            description: |-
+                ## Роут предназначен для получения новой пары токенов (access и refresh) по действующему refresh-токену.
+
+                Пользователь должен передать refresh токен в теле запроса.
+                Access токен не требуется.
+            operationId: authRefreshToken
+            parameters:
+                - in: body
+                  name: Body
+                  schema:
+                    properties:
+                        refresh_token:
+                            description: Рефреш токен
+                            type: string
+                            x-go-name: RefreshToken
+                    required:
+                        - refresh_token
+                    type: object
+            responses:
+                "200":
+                    description: '## Успешная авторизаиця'
+                    schema:
+                        $ref: '#/responses/success/schema'
+                "400":
+                    description: |-
+                        ## Неверный запрос
+                        Возможно, вам стоит перепроверить введенные данные
+
+                        Все возможные сообщения об ошибках в полезной нагрузке (payload):
+                        <ul>
+                          <li>Отсутствует refresh токен</li>
+                          <li>Невалидный формат токена</li>
+                        </ul>
+                    schema:
+                        $ref: '#/responses/badRequest/schema'
+                "401":
+                    description: '## Недействительный или просроченный refresh токен'
+                    schema:
+                        $ref: '#/responses/unauthorized/schema'
+                "429":
+                    description: |-
+                        ## Retry Limit Exceeded
+                        Количество попыток: <code>4</code>
+                        Сбросить лимит после <code>5 минуты</code>
+                    schema:
+                        $ref: '#/responses/retryLimitExceeded/schema'
+                "500":
+                    description: Internal Server Error or Something went wrong
+                    schema:
+                        $ref: '#/responses/internalServer/schema'
+            summary: Обновление токенов
+            tags:
+                - Authorization
     /auth/registration:
         post:
             description: |-
@@ -198,17 +246,9 @@ paths:
                         <ul>
                           <li>Не верный OTP код</li>
                           <li>Неправильный логин или пароль</li>
-                          <li>Одно или несколько полей пустые</li>
                         </ul>
                     schema:
                         $ref: '#/responses/badRequest/schema'
-                "429":
-                    description: |-
-                        ## Retry Limit Exceeded
-                        Количество попыток: <code>4</code>
-                        Сбросить лимит после <code>5 минуты</code>
-                    schema:
-                        $ref: '#/responses/retryLimitExceeded/schema'
                 "500":
                     description: Internal Server Error or Something went wrong
                     schema:
